# Vectorization-Example

./: CMakeLists.txt  README.md  intrin.cc
cmake/: ConfigureCXXSTD.cmake  FindSSE.cmake  MacroUtilities.cmake  MakeRules_cxx.cmake  Packages.cmake
source/: aligned_allocator.cc  aligned_allocator.hh  common.hh  constants.hh
